unpackaged/main/default/objects/OrderApi__Renewal_Path_Variable__c/OrderApi__Renewal_Path_Variable__c.object-meta.xml
<CustomObject>
    <description>Create conditional Renewal Path Rules based on a field located on the Account or Contact object.</description>
    <label>Renewal Path Variable</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Renewal Path Variable ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Renewal Path Variables</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>