unpackaged/main/default/objects/OrderApi__Renewal_Path_Variable__c/fields/OrderApi__Field__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Field__c</fullName>
    <description>**Required** The API Name of the Field used to evaluate for the Renewal Path Variable.</description>
    <inlineHelpText>**Required** The API Name of the Field used to evaluate for the Renewal Path Variable.</inlineHelpText>
    <label>Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>