unpackaged/main/default/objects/OrderApi__Renewal_Path_Variable__c/fields/OrderApi__Object__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Object__c</fullName>
    <description>**Required** The API Name of the Object evaluated for the Renewal Path Rule Variable.</description>
    <inlineHelpText>**Required** The API Name of the Object evaluated for the Renewal Path Rule Variable.</inlineHelpText>
    <label>Object</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>