unpackaged/main/default/objects/OrderApi__Renewal_Path_Variable__c/fields/OrderApi__Renewal_Path__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Renewal_Path__c</fullName>
    <description>**Required** Renewal Path Variables hold a Master-Detail relationship to Renewal Paths.</description>
    <inlineHelpText>**Required** Renewal Path Variables hold a Master-Detail relationship to Renewal Paths.</inlineHelpText>
    <label>Renewal Path</label>
    <referenceTo>OrderApi__Renewal_Path__c</referenceTo>
    <relationshipLabel>Renewal Path Variables</relationshipLabel>
    <relationshipName>Renewal_Path_Variables</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>