unpackaged/main/default/objects/OrderApi__Renewal_Path_Variable__c/fields/OrderApi__Value__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Value__c</fullName>
    <description>**Required** The value of the Field to evaluate against the Customer to determine Item availability.</description>
    <inlineHelpText>**Required** The value of the Field to evaluate against the Customer to determine Item availability.</inlineHelpText>
    <label>Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>